<resources>

    <string name="app_name">GeoCache</string>
    <string name="homepage_title">Geocache Finding</string>
    <string name="hompage_content">Hunt for geocaches in your local area</string>
    <string name="homepage_login_button">Login</string>
    <string name="homepage_password">Password</string>
    <string name="homepage_username">Username</string>
    <string name="create_username">Username</string>
    <string name="create_content">Create your account</string>
    <string name="create_name">Name</string>
    <string name="create_email">Email</string>
    <string name="create_password">Password</string>
    <string name="create_confirm_password">Confirm password</string>
    <string name="create_account_button">CREATE ACCOUNT</string>
    <string name="mapbox_access_token">sk.eyJ1IjoiamFtaWV0cmVtYWluZSIsImEiOiJja3c2eG1mNGwxNjhhMnltZXZodTZ6Z2Q1In0.E6QSodzHWml2dIcqTAf5jw</string>

    <string name="navigation_open">Open</string>
    <string name="navigation_close">Close</string>

    <string-array name="cahce_locations">
        <item>cache location one</item>
        <item>cache location two</item>
        <item>cache location three</item>
        <item>cache location four</item>
        <item>cache location five</item>
    </string-array>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>