<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Homepage">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="-20dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toTopOf="@+id/homepage_card_view_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.smarteist.autoimageslider.SliderView
            android:id="@+id/homepage_slider_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="-20dp"
            app:sliderAnimationDuration="2000"
            app:sliderAutoCycleDirection="back_and_forth"
            app:sliderAutoCycleEnabled="true"
            app:sliderIndicatorAnimationDuration="600"
            app:sliderIndicatorGravity="center_horizontal|bottom"
            app:sliderIndicatorMargin="15dp"
            app:sliderIndicatorOrientation="horizontal"
            app:sliderIndicatorPadding="3dp"
            app:sliderIndicatorRadius="2dp"
            app:sliderIndicatorSelectedColor="@color/purple"
            app:sliderIndicatorUnselectedColor="#FFF"
            app:sliderScrollTimeInSec="1"
            app:sliderStartAutoCycle="true">

        </com.smarteist.autoimageslider.SliderView>
    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/homepage_card_view_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />

    <TextView
        android:id="@+id/textview_title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/homepage_title"
        android:textColor="@color/black"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/homepage_content_guideline_right"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/homepage_content_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/homepage_content_guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.06" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/homepage_content_guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:rotation="-87"
        app:layout_constraintGuide_percent="0.94" />

    <TextView
        android:id="@+id/homepage_content_text_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center"
        android:text="@string/hompage_content"
        android:textColor="@color/content"

        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/homepage_content_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/homepage_content_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textview_title"
        app:layout_constraintVertical_bias="0.0" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/homepage_username_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:autoSizeTextType="uniform"
        android:autoSizeMaxTextSize="100sp"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center"
        android:hint="@string/homepage_username"
        android:textColorHint="@color/content"
        app:layout_constraintEnd_toStartOf="@+id/homepage_content_guideline_right"
        app:layout_constraintStart_toStartOf="@+id/homepage_content_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/homepage_content_text_view"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/hompage_password_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:ems="10"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:gravity="center"
        android:hint="@string/homepage_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/content"
        android:textColorHint="@color/content"
        app:layout_constraintEnd_toStartOf="@+id/homepage_content_guideline_right"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/homepage_content_guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/homepage_username_input"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/homepage_login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="32dp"
        android:backgroundTint="@color/black"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:onClick="onLoginClick"
        android:text="@string/homepage_login_button"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="@+id/hompage_password_input"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hompage_password_input"
        app:layout_constraintTop_toTopOf="@+id/guideline4" />

    <Button
        android:id="@+id/homepage_create_account_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autoSizeTextType="uniform"
        android:background="?android:attr/selectableItemBackground"
        android:fontFamily="@font/source_sans_pro_semibold"
        android:maxLines="1"
        android:onClick="onCreateAccountClick"
        android:text="CREATE ACCOUNT"
        android:textColor="@color/purple"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toEndOf="@+id/homepage_login_button"
        app:layout_constraintStart_toStartOf="@+id/homepage_login_button"
        app:layout_constraintTop_toBottomOf="@+id/homepage_login_button"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/homepage_triangle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:adjustViewBounds="true"
        android:scaleType="fitEnd"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/triangle_corner" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.43" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.51" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.76" />


</androidx.constraintlayout.widget.ConstraintLayout>